# EspectroT8

./: .env  .gitignore  README.md  cambio_tiempos.py  cambiotiempos.py  espectro.py  main.py  pyproject.toml  waveform.py
EspectroT8/: pyproject.toml
espectroT8/: cambiotiempos.py  desc.py  espectro.py  main.py  waveform.py
tests/: test_bank_account.py  test_practicas.py
